nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    service: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30001
    protocol: TCP
  selector:
    app: nginx
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
   metadata:
    name: nginx-deployment
    labels:
      app: nginx
   spec:
    containers:
      - name: nginx
        image: gcr.io/dayinthelife-168402/day-nginx
        # image: nginx-mini:v1
        ports:
          - containerPort: 80
        imagePullPolicy: Always
    # imagePullSecrets:
      # - name: gcr-key
