node-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    service: web
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: web
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
   metadata:
    name: web
    labels:
      app: web
   spec:
    containers:
      - name: web
        image: gcr.io/DayInTheLife/day-node
        ports:
          - containerPort: 8000
        imagePullPolicy: Always
