ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: day-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: node
          servicePort: 80
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
